grammar.js
    program: $ => seq(
      alias(optional(token.immediate(/#![^\n\r]*/)), $.shebang_comment),
      repeat($._statement),
    ),

    _statement: $ => prec(1, seq(choice(
      $.var_declaration,
      $.var_assignment,
      $.type_declaration,
      $.record_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.return_statement,
      $.break,
      $._for_statement,
      $.do_statement,
      $.while_statement,
      $.repeat_statement,
      $.function_call,
      $.function_statement,
      $.macroexp_statement,
      $.if_statement,
      seq('::', alias($.identifier, $.label), '::'),
      $.goto,
    ), optional(';'))),

    return_statement: $ => prec.right(1, seq(
      'return',
      optional(choice(
        list($._expression),
        seq('(', list($._expression), ')'),
      )),
    )),

    _expression: $ => choice(
      $.identifier,
      $._var,
      $.number,
      $.string,
      $.boolean,
      $.nil,
      $.table_constructor,
      $.anon_function,
      $.function_call,
      $._prefix_expression,
      $.bin_op,
      $.unary_op,
      $.varargs,
      $.type_cast,
      $.parenthesized_expression,
    ),

    var_declarators: $ => list(alias($.var_declarator, $.var)),

    expressions: $ => list($._expression),

    var_declaration: $ => seq(
      $.scope,
      field('declarators', $.var_declarators),
      optional(field('type_annotation', $.type_annotation)),
      optional(seq('=', field('initializers', $.expressions))),
    ),

    _prefix_expression: $ => prec(10, choice(
      $._var,
      $.function_call,
      $.parenthesized_expression,
    )),
    arguments: $ => choice(
      seq('(', optional(list($._expression)), ')'),
      $.string,
      $.table_constructor,
    ),
    function_call: $ => prec(10, seq(
      field('called_object', choice(
        $._prefix_expression,
        $.method_index,
      )),
      field('arguments', $.arguments),
    )),

    table_entry: $ => choice(
      seq('[', field('expr_key', $._expression), ']', '=', field('value', $._expression)),
      prec(1, seq(
        field('key', $.identifier),
        field('type', optional(seq(':', $._type))),
        '=',
        field('value', $._expression),
      )),
      prec(1, field('value', $._expression)),
    ),

    table_constructor: $ => seq(
      '{',
      optional(list($.table_entry, choice(',', ';'))),
      optional(choice(',', ';')),
      '}',
    ),

    function_name: $ => seq(
      field('base', $.identifier),
      choice(
        seq(
          repeat(seq('.', field('entry', $.identifier))),
          seq(':', field('method', $.identifier)),
        ),
        repeat1(seq('.', field('entry', $.identifier))),
      ),
    ),

    scope: $ => field('scope', choice('local', 'global')),

    function_statement: $ => choice(
      seq(
        $.scope,
        'function',
        field('name', $.identifier),
        field('signature', $.function_signature),
        field('body', $.function_body),
      ),
      seq(
        'function',
        field('name', $.function_name),
        field('signature', $.function_signature),
        field('body', $.function_body),
      ),
    ),

    variadic_type: $ => prec(prec_type_op.index - 1, seq($._type, '...')),
    _type_list_maybe_vararg: $ => seq(list($._type), optional(seq(',', $.variadic_type))),
    return_type: $ => choice(
      $.variadic_type,
      prec.dynamic(1, $._type_list_maybe_vararg),
      prec.dynamic(10, seq('(', $._type_list_maybe_vararg, ')')),
    ),

    typearg: $ => choice(
      field('name', $.identifier),
      seq(field('name', $.identifier), 'is', field('constraint', $._type))
    ),
    typeargs: $ => seq('<', list($.typearg), '>'),

    anon_function: $ => seq(
      'function',
      field('signature', $.function_signature),
      field('body', $.function_body),
    ),

    optional_marker: $ => '?',

    function_signature: $ => seq(
      field('typeargs', optional($.typeargs)),
      field('arguments', alias($.signature_arguments, $.arguments)),
      optional(seq(':', field('return_type', $.return_type))),
    ),

    function_body: $ => seq(
      repeat($._statement),
      'end',
    ),

    _type: $ => prec(2, choice(
      $.simple_type,
      $.type_index,
      $.table_type,
      $.function_type,
      $.type_union,
      seq('(', $._type, ')'),
    )),

    simple_type: $ => prec.right(1000, seq(
      field('name', $.identifier),
      optional(alias($.typearg_params, $.typeargs)),
    )),

    table_type: $ => seq(
      '{',
      choice(
        field('value_type', $._type),
        seq(
          field('key_type', $._type),
          ':',
          field('value_type', $._type),
        ),
        seq(
          field('tuple_type', $._type),
          repeat1(seq(',', field('tuple_type', $._type))),
        ),
      ),
      '}',
    ),

    function_type: $ => prec.right(1, seq(
      'function',
      field('typeargs', optional($.typeargs)),
      optional(seq(
        field('arguments', alias($.function_type_args, $.arguments)),
        optional(seq(
          ':',
          field('return_type', $.return_type),
        )),
      )),
    )),

    index: $ => prec(1, seq(
      field('indexed_object', $._prefix_expression),
      choice(
        field('key', seq('.', $.identifier)),
        field('expr_key', seq('[', $._expression, ']')),
      ),
    )),

    varargs: $ => '...',
    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    number: $ => choice(
      /\d+(\.\d+)?(e\d+)?/i,
      /\.\d+(e\d+)?/i,
      /0x[0-9a-fA-F]+(\.[0-9a-fA-F]+)?(p\d+)?/,
    ),
    _short_string_content: $ => alias(repeat1(choice(
      $.format_specifier,
      $.escape_sequence,
      token.immediate(prec(1, '%')),
      prec(0, $._short_string_char),
    )), $.string_content),

    _long_string_content: $ => alias(repeat1(choice(
      $.format_specifier,
      $._long_string_char,
      token.immediate(prec(1, '%')),
    )), $.string_content),

    string: $ => prec(2, choice(
      seq(
        field('start', alias($._short_string_start, 'short_string_start')),
        field('content', optional($._short_string_content)),
        field('end', alias($._short_string_end, 'short_string_end')),
      ),

      seq(
        field('start', alias($._long_string_start, 'long_string_start')),
        field('content', optional($._long_string_content)),
        field('end', alias($._long_string_end, 'long_string_end')),
      ),
    )),

    format_specifier: $ => token.immediate(prec(3, seq(
      '%',
      choice(
        '%',
        seq(
          optional(choice(
            '+', '-',
          )),
          optional(' '),
          optional('#'),
          optional(/[0-9]+/),
          optional('.'),
          optional(/[0-9]+/),
          /[AaEefGgcdiouXxpqs]/,
        ),
      ),
    ))),

    escape_sequence: $ => token.immediate(prec(3, seq(
      '\\',
      choice(
        /[abfnrtvz"'\\]/,
        seq('x', /[0-9a-fA-F]{2}/),
        seq('d', /[0-7]{3}/),
        seq('u{', /[0-9a-fA-F]{1,8}/, '}'),
      ),
    ))),
