corpus/comments.txt
==============================
Single line comment
==============================

-- This is a comment

---------------------

(program (comment))

==============================
Multi line comment
==============================

--[[
This is a comment
]]

---------------------

(program (comment))

==============================
Inline comment
==============================

local x --[[ This is a comment ]] = 5

---------------------

(program (var_declaration (var (identifier)) (comment) (number)))

==============================
Shebang comment
==============================
#!/usr/bin/env tl run

---------------------

(program (shebang_comment))
