corpus/semi-colons.txt
================================================================================
Statement with a semi-colon
================================================================================

local x = 5;

--------------------------------------------------------------------------------

(program
  (var_declaration
    scope: (scope)
    (var
      name: (identifier))
    (number)))
